[package]
name = "nu_plugin_nopen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nu_plugin_nopen"
bench = false

[lib]
bench = false

[dependencies]
nu-plugin = { path = "../nu-plugin", version = "0.84.1" }
nu-protocol = { path="../nu-protocol", version = "0.84.1", features = ["plugin"] }
# nu-plugin = "0.84.0"
# nu-protocol = "0.84.0"
