[package]
name = "nu_plugin_zk4log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nu_plugin_zk4log"
bench = false

[lib]
bench = false

[dependencies]
# nu-plugin = { path = "../nu-plugin", version = "0.84.1" }
# nu-protocol = { path="../nu-protocol", version = "0.84.1", features = ["plugin"] }
nu-plugin = "0.84.0"
nu-protocol = "0.84.0"
clap = "2.33.3"
serde = "1.0.130"
serde_json = { version = "1.0.67", features = ["preserve_order"] }
dialoguer = "0.9.0"
sha256 = "1.4.0"
rand = "0.8.5"
nu-path = "0.85.0"
bellman = "0.14.0"
sha2 = "0.10.7"
bls12_381 = "0.8.0"
ff = "0.13.0"
pairing = "0.23.0"
